[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-market-mcp"
version = "0.1.0"
description = "MCP server for real-time and historical cryptocurrency market data"
authors = [
  { name = "Arpon Sadhukhan", email = "arpon.skhan@example.com" }
]
requires-python = ">=3.10"
dependencies = [
  "mcp>=0.1.0",
  "ccxt>=4.0.0",
  "requests>=2.32.0",
  "aiohttp>=3.9.0",
  "cachetools>=5.3.0",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "redis>=7.0.1",
]

[project.optional-dependencies]
 dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=7.0.0",
 ]

[project.scripts]
crypto-market-mcp = "crypto_market_mcp.server:main"
crypto-market-chatbot = "crypto_market_mcp.chatbot:main"
crypto-market-worker = "crypto_market_mcp.worker:main"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
